# yassy

./: .gitignore  Cargo.toml  README.md  TODO  ardour.sh  connect.sh  install.sh  jalvconnect.sh  rls.toml  top.sh
deprecated/: hoit.rs
deprecated/host/: connect.sh
doc/htlatex/: config
doc/html/: index.html  main.css  main.html
doc/latex/: main.bib  main.tex  model2-names.bst
doc/python/: bindings.py  frei_appendix_B1.py  frei_appendix_B2.py  frei_appendix_B3.py  frei_fig18.py  frei_fig18to20.py  postfilter.py  postfilter_apply_as_timeseries.py  utils.py
doc/python/trash/: postfilter.py
documentation/latex/: main.tex
documentation/python/: postfilter.py
examples/: blit.rs  frei_fig8.rs
examples_tmp/: blit.rs
midi/: Cargo.toml
midi/src/: lib.rs
mygsl/: Cargo.toml
mygsl/src/: lib.rs
src/: adsr.rs  lib.rs  lv2_plugin.rs  midiproc.rs  observer.rs  oscillator.rs  plugin.rs  polyphony.rs  synth.rs  types.rs  utils.rs  voice.rs
tests/: test.rs
ui/: Cargo.toml
ui/client/: app.js  yassyclient.html
ui/src/: lib.rs  yassyui.rs
yassy.lv2/: TODO  manifest.ttl  yassy.ttl
