[package]
name = "yassy"
version = "0.1.0"
authors = ["stefan"]

# This workspace contains multiple crates. See http://doc.crates.io/manifest.html
#[workspace]
#members = ["midi"]

[dependencies]
libc = "*"
mygsl = { path = "mygsl" }
midi= { path = "midi" }
lv2 = "0.2.0"

[lib]
name = "yassy"
crate-type = ["rlib","dylib"] # ?

#[dev-dependencies] # for testing/documentation
#gnuplot = "*"
#getopts = "=0.2.14" # gnuplot dependency
#plot = { path = "examples/plot" }


