[package]
name = "yassy"
version = "0.1.0"
authors = ["stefan"]

# This workspace contains multiple crates. See http://doc.crates.io/manifest.html
[workspace]
#members = ["midi"]

[dependencies]
libc = "*"
mygsl = { path = "mygsl" }
midi= { path = "midi" }
lv2 = { path = "../lv2"}
# yassyui isn't a dependecy, but included here to make "workspace" work
yassyui = { path = "ui" }


[lib]
name = "yassy"
crate-type = ["cdylib"]


#[dev-dependencies] # for testing/documentation
#gnuplot = "*"
#getopts = "=0.2.14" # gnuplot dependency
#plot = { path = "examples/plot" }


