[package]
name = "yassyui"
version = "0.1.0"
authors = ["poidl <hoitaus@gmail.com>"]
#workspace = "../../yassy"

[dependencies]
libc = "*"
lv2 = { path = "../../lv2" }
#websocket = "*"
websocket = { path = "../../../rust-websocket" }
serde = "*"
serde_json = "*"
serde_derive = "*"

[lib]
crate-type = ["cdylib"]
